[package]
name = "prosto"
version = "0.4.1"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
edition = "2018"
license-file = "LICENSE.txt"
description = "Compress prost! messages with zstd, optional tokio channels support"
homepage = "https://github.com/onsails/prosto"
repository = "https://github.com/onsails/prosto"
documentation = "https://docs.rs/prosto"
categories = ["compression"]
keywords = ["protocol-buffers", "protobuf", "prost", "zstd", "streams"]

[features]
default = ["enable-async"]
enable-async = ["futures"]

[dependencies]
prost = "0.6"
prost-types = "0.6"

zstd = "0.5"

thiserror = "1.0"
tracing = "0.1"

futures = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.7"
tracing-subscriber = "0.2"
proptest = "0.10"
tokio = { version = "0.2", features = ["rt-threaded", "sync"]}
tonic = "0.2"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.2", default-features = false, features = ["transport", "prost"] }
