[package]
name = "prosto"
version = "0.4.6-alpha.0"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
edition = "2018"
license-file = "LICENSE.txt"
description = "Compress prost! messages with zstd, optional tokio channels support"
homepage = "https://github.com/onsails/prosto"
repository = "https://github.com/onsails/prosto"
documentation = "https://docs.rs/prosto"
categories = ["compression"]
keywords = ["protocol-buffers", "protobuf", "prost", "zstd", "streams"]

[features]
default = ["enable-async"]
enable-async = ["futures", "anyhow"]

[workspace]
members = [ "dummy" ]

[dependencies]
prost = "0.6"
prost-types = "0.6"

zstd = "0.6"

thiserror = "1.0"
tracing = "0.1"

futures = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
