[package]
name = "prosto-dummy"
version = "0.0.1"
edition = "2018"

[dependencies]
prost = "0.7"

[dev-dependencies]
prosto = { path = "../" }
rand = "0.8"
tracing-subscriber = "0.2"
proptest = "0.10"
tokio = { version = "1.1.0", features = ["rt-multi-thread", "sync"]}
tonic = "0.4"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
