[package]
name = "prosto-dummy"
version = "0.0.1"
edition = "2018"

[dependencies]
prost = "0.8"

[dev-dependencies]
prosto = { path = "../" }
rand = "0.8"
tracing-subscriber = "0.2"
proptest = "1.0"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync"]}
tonic = "0.5"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
