[package]
name = "prosto-dummy"
version = "0.0.1"
edition = "2018"

[dependencies]
prost = "0.9"

[dev-dependencies]
prosto = { path = "../" }
rand = "0.8"
tracing-subscriber = "0.3"
proptest = "1.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "sync"]}
tonic = "0.6"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.6", default-features = false, features = ["transport", "prost"] }
